--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AICompletionFromProfileTask.Fields.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AICompletionFromProfileTask.Fields.Edit.cshtml
@@ -25,3 +25,38 @@
     <span asp-validation-for="PromptTemplate"></span>
     <span class="hint">@T["This template is used to generate the prompt for the AI model. You can structure the prompt using Liquid syntax and seamlessly combine existing variables with placeholders like <code>{0}</code>.", "profile"]</span>
 </div>
+
+<style asp-name="codemirror"></style>
+<script asp-name="codemirror" at="Foot"></script>
+<script asp-name="codemirror-mode-javascript" at="Foot"></script>
+<script asp-name="codemirror-addon-display-autorefresh" at="Foot"></script>
+<script asp-name="codemirror-addon-mode-simple" at="Foot"></script>
+<script asp-name="codemirror-addon-mode-multiplex" at="Foot"></script>
+<script asp-name="codemirror-mode-xml" at="Foot"></script>
+<script asp-src="~/OrchardCore.Liquid/codemirror/liquid.js" at="Foot"></script>
+
+<script at="Foot" depends-on="codemirror">
+    document.addEventListener('DOMContentLoaded', function () {
+        const initializeLiquidEditor = (textArea) => {
+
+            if (!textArea) {
+                return;
+            }
+
+            var editor = CodeMirror.fromTextArea(textArea, {
+                autoRefresh: true,
+                lineNumbers: true,
+                styleActiveLine: true,
+                matchBrackets: true,
+                mode: { name: "liquid" },
+            });
+
+            editor.on('change', function (cmEditor) {
+                cmEditor.save();
+                document.dispatchEvent(new Event('contentpreview:render'));
+            });
+        }
+
+        initializeLiquidEditor(document.getElementById('@Html.IdFor(x => x.PromptTemplate)'));
+    });
+</script>
