--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AICompletionWithConfigTask.Fields.Thumbnail.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AICompletionWithConfigTask.Fields.Thumbnail.cshtml
@@ -1,9 +1,9 @@
 @using CrestApps.OrchardCore.AI.Workflows.Models
 @using OrchardCore.Workflows.ViewModels
 
-@model ActivityViewModel<AICompletionFromProfileTask>
+@model ActivityViewModel<AICompletionWithConfigTask>
 
 <h4 class="card-title">
     <i class="fa-solid fa-pencil" aria-hidden="true"></i>
-    @T["AI Completion using Profile"]
+    @T["AI Completion using Direct Config"]
 </h4>
