--- a/src/Modules/CrestApps.OrchardCore.AI/Views/AIProviderConnectionFields.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/AIProviderConnectionFields.Edit.cshtml
@@ -4,7 +4,16 @@
 @model AIProviderConnectionFieldsViewModel
 
 <div class="@Orchard.GetWrapperClasses()">
-    <label asp-for="Name" class="@Orchard.GetLabelClasses()">@T["Technical Name"]</label>
+    <label asp-for="DisplayText" class="@Orchard.GetLabelClasses()">@T["Title"]</label>
+    <div class="@Orchard.GetEndClasses()">
+        <input type="text" asp-for="DisplayText" class="form-control" />
+        <span asp-validation-for="DisplayText" class="text-danger"></span>
+        <span class="hint">@T["The display text for the connection."]</span>
+    </div>
+</div>
+
+<div class="@Orchard.GetWrapperClasses()">
+    <label asp-for="Name" class="@Orchard.GetLabelClasses()">@T["Technical name"]</label>
     <div class="@Orchard.GetEndClasses()">
         <input asp-for="Name" class="form-control" disabled="@(!Model.IsNew)" />
         <span asp-validation-for="Name" class="text-danger"></span>
@@ -16,15 +25,6 @@
         {
             <span class="hint">@T["Connection name."]</span>
         }
-    </div>
-</div>
-
-<div class="@Orchard.GetWrapperClasses()">
-    <label asp-for="DisplayText" class="@Orchard.GetLabelClasses()">@T["Display text"]</label>
-    <div class="@Orchard.GetEndClasses()">
-        <input type="text" asp-for="DisplayText" class="form-control" />
-        <span asp-validation-for="DisplayText" class="text-danger"></span>
-        <span class="hint">@T["The display text for the connection."]</span>
     </div>
 </div>
 
@@ -55,3 +55,11 @@
         </div>
     </div>
 </div>
+
+@if (Model.IsNew)
+{
+    <script asp-name="technical-name-generator"></script>
+    <script>
+        window.initAutoGenerateTechnicalName('@Html.IdFor(x => x.DisplayText)', '@Html.IdFor(x => x.Name)');
+    </script>
+}
