--- a/src/Modules/CrestApps.OrchardCore.AI/Views/AIToolInstanceFields.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/AIToolInstanceFields.Edit.cshtml
@@ -5,7 +5,7 @@
 @model AIToolInstanceFieldsViewModel
 
 <div class="@Orchard.GetWrapperClasses()">
-    <label asp-for="DisplayText" class="@Orchard.GetLabelClasses()">@T["Display text"]</label>
+    <label asp-for="DisplayText" class="@Orchard.GetLabelClasses()">@T["Title"]</label>
     <div class="@Orchard.GetEndClasses()">
         <input asp-for="DisplayText" class="form-control" />
         <span asp-validation-for="DisplayText" class="text-danger"></span>
