--- a/src/Modules/CrestApps.OrchardCore.AI/Views/AIProfileMainFields.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/AIProfileMainFields.Edit.cshtml
@@ -30,8 +30,8 @@
 
 @if (Model.IsNew)
 {
-    <script asp-name="CrestAppsTechnicalNameGenerator"></script>
-    <script>
+    <script asp-name="TechnicalNameGenerator"></script>
+    <script depends-on="TechnicalNameGenerator">
         window.initAutoGenerateTechnicalName('@Html.IdFor(x => x.DisplayText)', '@Html.IdFor(x => x.Name)');
     </script>
 }
