--- a/src/Modules/CrestApps.OrchardCore.AI/Views/AIProviderConnection.DefaultTags.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/AIProviderConnection.DefaultTags.SummaryAdmin.cshtml
@@ -7,6 +7,7 @@
     {
         AIProviderConnectionType.Chat => T["Chat"],
         AIProviderConnectionType.Embedding => T["Embedding"],
+        AIProviderConnectionType.SpeechToText => T["Speech-to-text"],
         _ => T["Unknown connection type"]
     };
 }
