Add AIProfile actions menu and relocate views into Items folder

--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/AIChatSessionsList.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/AIChatSessionsList.cshtml
@@ -32,7 +32,7 @@
                    data-message="@T["Are you sure you want to delete all chat history?"]"
                    data-ok-text="@T["Yes"]"
                    data-cancel-text="@T["Cancel"]">
-                    <i class="fa-solid fa-trash"></i> @T["Delete All History"]
+                    <i class="fa-solid fa-trash"></i> @T["Delete Chat History"]
                 </a>
             </div>
         </div>
