--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AIProfile.Buttons.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AIProfile.Buttons.SummaryAdmin.cshtml
@@ -1,5 +1,6 @@
 @using CrestApps.OrchardCore.AI.Core
 @using CrestApps.OrchardCore.AI.Models
+@using Microsoft.AspNetCore.Authorization
 @using OrchardCore.DisplayManagement.Views
 
 @model ShapeViewModel<AIProfile>
@@ -7,11 +8,3 @@
 <a asp-action="Edit"
    asp-route-id="@Model.Value.ItemId"
    class="btn btn-primary btn-sm">@T["Edit"]</a>
-
-@if (Model.Value.GetSettings<AIProfileSettings>().IsRemovable)
-{
-    <a asp-action="Delete"
-       asp-route-id="@Model.Value.ItemId"
-       class="btn btn-danger btn-sm"
-       data-url-af="RemoveUrl UnsafeUrl">@T["Delete"]</a>
-}
