--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AIProfile.ActionsMenu.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AIProfile.ActionsMenu.SummaryAdmin.cshtml
@@ -6,5 +6,8 @@
     <a asp-action="Delete"
        asp-route-id="@Model.Value.ItemId"
        class="dropdown-item text-danger"
-       data-url-af="RemoveUrl UnsafeUrl">@T["Delete"]</a>
+       data-url-af="RemoveUrl UnsafeUrl"
+       data-message="@T["Are you sure you want to delete this profile?"]"
+       data-ok-text="@T["Yes"]"
+       data-cancel-text="@T["Cancel"]">@T["Delete"]</a>
 </li>
