improve the workflow of creating AI session.

--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/CompletedActivityEvent.Fields.Design.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/CompletedActivityEvent.Fields.Design.cshtml
@@ -1,5 +1,5 @@
 @model ActivityViewModel<CompletedActivityEvent>
-@using CrestApps.OrchardCore.Omnichannel.Managements.Workflows.Events
+@using CrestApps.OrchardCore.Omnichannel.Core.Workflows
 @using OrchardCore.Workflows.Helpers
 @using OrchardCore.Workflows.ViewModels
 
