--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/OmnichannelCampaignFields.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/OmnichannelCampaignFields.Edit.cshtml
@@ -155,6 +155,24 @@
         </div>
     </div>
 
+    <div class="@Orchard.GetWrapperClasses()">
+        <label class="@Orchard.GetLabelClasses()">@T["Permissions"]</label>
+        <div class="@Orchard.GetEndClasses()">
+            <div class="form-check">
+                <input asp-for="AllowAIToUpdateContact" class="form-check-input" type="checkbox" id="@Html.IdFor(x => x.AllowAIToUpdateContact)" />
+                <label class="form-check-label" for="@Html.IdFor(x => x.AllowAIToUpdateContact)">
+                    @T["Allow AI to update the contact"]
+                </label>
+            </div>
+            <div class="form-check">
+                <input asp-for="AllowAIToUpdateSubject" class="form-check-input" type="checkbox" id="@Html.IdFor(x => x.AllowAIToUpdateSubject)" />
+                <label class="form-check-label" for="@Html.IdFor(x => x.AllowAIToUpdateSubject)">
+                    @T["Allow AI to update the subject/title"]
+                </label>
+            </div>
+        </div>
+    </div>
+
     @if (Model.Tools is not null && Model.Tools.Count > 0)
     {
         <h4 class="border-bottom pb-2 mt-4">@T["System Defined Tools"]</h4>
